fix service link line overlapping title

--- a/app/assets/stylesheets/panamax/service_details.scss
+++ b/app/assets/stylesheets/panamax/service_details.scss
@@ -542,9 +542,9 @@
       content: '';
       border: $blue_grey 1px solid;
       border-width: 0 0 1px 1px;
-      height: 60px;
+      height: 30px;
       width: 20px;
-      top: -37px;
+      top: -3px;
       left: 0;
     }
 
